k8s/hw13/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - name: backend-80
      protocol: TCP
      port: 80
      targetPort: 80
