k8s/hw13/cache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - name: cache-80
      protocol: TCP
      port: 80
      targetPort: 80
