k8s/hw13/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - name: frontend-80
      protocol: TCP
      port: 80
      targetPort: 80
